[Changes 1.2c01]

* Fix the /TKB (timed kickban) command. (caf)

* Rewrite termcap/terminfo detection logic in configure and include term.h
  in term.c for the system definition of tparm().  This fixes a crash on
  NetBSD x86-64 (reported by jeezy), and should also ensure that terminfo
  is used in preference to termcap on NetBSD. (caf)

* Fix output when built against termcap. (caf)

* Fix STATUS_NOTIFY so that it appears in the right window. (caf)

* Improve robustness of status formats handling. (caf)

* Use system setenv() in preference to compat bsd_setenv(). (caf)

* Allow selection of alternate hashing methods with $crypt(). (caf)

* Improve the initial seeding of the randm() fallback RNG. (caf)

* Strengthen the cookie generation algorithm for /detach. (caf)

* RANDOM_SOURCE now only affects the rand() scripting function. (caf)

* Make RANDOM_LOCAL_PORTS actually random. (caf)

* Show same message on local terminal as used in emergency exit QUIT. (caf)

* Remove unused XLINK CTCP reply handler. (caf)

* Ensure add_socketread() doesn't leak file descriptors. (caf)

* Fix listing bans on local channels (/BANS &channel). (flashback)

* Fix unbanning by number (/UNBAN #channel #number). (caf)

* Improve the list_channels() function. (caf)

* Use socklen_t instead of plain int where available. (flashback)

* Use <termios.h> in preference to <sys/termios.h> where it's available. (caf)

* Skip malformed abots.sav entries in read_abot(), avoiding null
  dereferences found by Coverity. (flashback)

* Ensure proper handling of % when /FSET DCC is used. (caf)

* Improve robustness of CDCC save file loading. (caf)

* Fix open file leak in /LASTLOG found by Coverity. (caf)

* Fix file descriptor leak on SOCKS4 connection failure found by
  Coverity. (caf)

* Fix out-of-bounds error in cryptit() found by Coverity. (flashback)

* Cleanup save_formats(). (caf)

* Fix off-by-one error in add_socketread() and set_socketwrite() found
  by Coverity. (caf)
