@@ -1,5 +1,7 @@
 [Changes 1.2c01]
 
+* Fix the $timer() scripting function. (caf)
+
 * Fix the /TKB (timed kickban) command. (caf)
 
 * Rewrite termcap/terminfo detection logic in configure and include term.h
